--- a/Keyboard/forAndroid/app/build.gradle
+++ b/Keyboard/forAndroid/app/build.gradle
@@ -43,5 +43,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation 'com.example.captivewebview:captivewebview:6.0'
+    implementation project(':captive-web-view:forAndroid:captivewebview')
 }
