--- a/Keyboard/forAndroid/settings.gradle
+++ b/Keyboard/forAndroid/settings.gradle
@@ -1,2 +1,5 @@
-include ':app'
+// (c) 2021 The ACE Centre-North, UK registered charity 1089313.
+// MIT licensed, see https://opensource.org/licenses/MIT
+
+include(':app', ':captive-web-view:forAndroid:captivewebview')
 rootProject.name='DasherKeyboard'
