--- a/Keyboard/forAndroid/app/build.gradle
+++ b/Keyboard/forAndroid/app/build.gradle
@@ -1,24 +1,21 @@
-// (c) 2021 The ACE Centre-North, UK registered charity 1089313.
+// (c) 2022 The ACE Centre-North, UK registered charity 1089313.
 // MIT licensed, see https://opensource.org/licenses/MIT
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
-
 android {
-    compileSdkVersion 29
+    compileSdk 32
 
     sourceSets {
         main.assets.srcDirs += new File(new File(
                 rootDir.getParent()), "WebResources")
     }
 
-    buildToolsVersion "29.0.2"
-
     defaultConfig {
         applicationId "com.example.dasherkeyboard"
-        minSdkVersion 26
-        targetSdkVersion 29
+        minSdk 26
+        targetSdk 32
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -36,12 +33,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     implementation project(':captive-web-view:forAndroid:captivewebview')
 }
